--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,3 +55,17 @@ body {
   font-style: italic;
   color: #8a6f6f;
 }
+.enter {
+  margin-top: 40px;
+}
+
+.enter a {
+  font-style: italic;
+  color: #8a6f6f;
+  border-bottom: 1px solid #e6dcd2;
+  padding-bottom: 4px;
+}
+
+.enter a:hover {
+  opacity: 0.7;
+}
