--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 60px;
-  align-items: center;
+  align-items: start;
 }
 
 .menu-content img {
@@ -167,7 +167,7 @@ body {
 }
 
 .menu-content img:nth-child(1) {
-  transform: translateY(60px);
+  transform: translateY(12px);
 }
 
 .menu-content img:nth-child(3) {
