--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ body {
 }
 
 .menu-content img:nth-child(1) {
-  transform: translateY(12px);
+  transform: translateY(60px);
 }
 
 .menu-content img:nth-child(3) {
@@ -213,6 +213,7 @@ body {
 .general {
   padding-left: 1rem;
   border-left: 1px solid var(--cold-gray);
+  transform: translateY(30px)
 }
 
 /* ---------------- GALLERY ---------------- */
