--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --cold-gray: #d4d5d8;
   --text-main: #434343;
   --text-soft: #828282;
-  --dusty-rose: #f4a7b9;
+  --dusty-rose: #dc9fb4; /*nadeshiko*/
 }
 
 * {
