--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   --bg: #f1f1f0;
   --cold-gray: #91989f; /*ginnezumi*/
   --text-main: #574c57;
-  --text-soft: #828282; /*tro*/
+  --text-soft: #566c73; /*ainezumi*/
   --dusty-rose: #dc9fb4; /*nadeshiko*/
 }
 
